Issue #8844: Regular and recursive lock acquisitions can now be interrupted by signals on platforms using pthreads.  Patch by Reid Kleckner.